--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/highway-db?useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://47.99.125.173:3306/resmgr?useUnicode=true&characterEncoding=UTF-8
         username: admin
         password: 123456
     jackson:
