--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
         max-threads: 10
         min-spare-threads: 10
     port: 80
-
+    context-path: /code
 # mysql
 spring:
     datasource:
