--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,12 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://47.99.125.173:3306/smartpark?useUnicode=true&characterEncoding=UTF-8
-        username: hnxxy
-        password: Wf0s8FdF
+#        url: jdbc:mysql://47.99.125.173:3306/smartpark?useUnicode=true&characterEncoding=UTF-8
+#        username: hnxxy
+#        password: Wf0s8FdF
+        url: jdbc:mysql://47.111.167.92:3306/chisondo?useUnicode=true&characterEncoding=UTF-8
+        username: teaman
+        password: AE6y@dNf
     jackson:
         time-zone: GMT+8
         date-format: yyyy-MM-dd HH:mm:ss
