--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -2,9 +2,9 @@
 
 mainPath=com.chris
 #\u5305\u540D
-package=com.chris.smartpark
+package=com.chisondo.server.modules
 #\u4F5C\u8005g
-author=chris
+author=ding.zhong
 #Email
 email=258321511@qq.com
 #\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
